fix(course-detail): reverse golf info and courses on mobile

--- a/src/pages/CourseDetails/CourseDetails.css
+++ b/src/pages/CourseDetails/CourseDetails.css
@@ -47,4 +47,8 @@
     .course-details-back {
         padding: 40px 16px 0;
     }
+
+    .course-details-golf-info {
+        flex-direction: column-reverse;
+    }
 }
